--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3R625BZWX5"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3R625BZWX5');
+    </script>
     <title>WEB1 - Welcome</title> <!-- 웹페이지명 -->
     <meta charset="utf-8"> <!-- 문자규칙 (utf-8로 문서를 읽어라.) -->
 </head>
@@ -13,6 +22,14 @@
         <li><a href="3.html">JavaScript</a></li> 
     </ol>
     <h2>WEB</h2> <!--heading-->
+    <p>
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/0KZm-1YY-4Q" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe> 
+    </p>
     <p>
         The World Wide Web (abbreviated WWW or the Web) is an information
         space where documents and other web resources are identified by
